--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "klvien",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "@nivo/bar": "^0.73.1",
     "@nivo/core": "^0.73.0",
