--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "klvien",
-  "version": "0.1.0",
+  "version": "1.0.0",
+  "engines": {
+    "node": "12.11.1"
+  },
   "private": true,
   "homepage": ".",
   "dependencies": {
