--- a/package.json
+++ b/package.json
@@ -1,11 +1,7 @@
 {
   "name": "klvien",
-  "version": "1.0.0",
-  "engines": {
-    "node": "12.11.1"
-  },
+  "version": "0.1.0",
   "private": true,
-  "homepage": ".",
   "dependencies": {
     "@nivo/bar": "^0.73.1",
     "@nivo/core": "^0.73.0",
@@ -33,12 +29,10 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "dev": "react-scripts start",
-    "start": "serve -s build",
+    "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "heroku-postbuild": "npm run build"
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
