--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "homepage": ".",
-  "engines": {
-    "node": "12.11.1"
+  "devDependencies": {
+    "@babel/core": "^7.15.5"
   },
   "dependencies": {
+    "@babel/core": "^7.15.5",
     "@nivo/bar": "^0.73.1",
     "@nivo/core": "^0.73.0",
     "@nivo/pie": "^0.73.0",
@@ -17,6 +18,7 @@
     "firebase": "^8.9.1",
     "framer-motion": "^4.1.17",
     "js-cookie": "^3.0.0",
+    "nivo": "^0.31.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-lottie": "^1.2.3",
