--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "homepage": ".",
+  "engines": {
+    "node": "6.11.1"
+  },
   "dependencies": {
     "@babel/core": "^7.15.5",
     "@nivo/bar": "^0.73.1",
