--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "klvien",
   "version": "0.1.0",
   "private": true,
-  "homepage": ".",
   "engines": {
-    "node": "6.11.1"
+    "node": "0.12.0",
+    "npm": "2.5.0"
   },
   "dependencies": {
     "@babel/core": "^7.15.5",
