--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": "0.12.0",
-    "npm": "2.5.0"
+    "node": "14.17.6"
   },
   "dependencies": {
     "@babel/core": "^7.15.5",
