--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
+    "eslint-config-react-app": "^6.0.0",
     "firebase": "^8.9.1",
     "framer-motion": "^4.1.17",
     "js-cookie": "^3.0.0",
