--- a/package.json
+++ b/package.json
@@ -1,12 +1,9 @@
 {
-  "name": "klvien",
+  "name": "klvien-staffs",
   "version": "0.1.0",
   "private": true,
-  "engines": {
-    "node": "14.17.6"
-  },
+  "homepage": ".",
   "dependencies": {
-    "@babel/core": "^7.15.5",
     "@nivo/bar": "^0.73.1",
     "@nivo/core": "^0.73.0",
     "@nivo/pie": "^0.73.0",
@@ -14,11 +11,9 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
-    "eslint-config-react-app": "^6.0.0",
     "firebase": "^8.9.1",
     "framer-motion": "^4.1.17",
     "js-cookie": "^3.0.0",
-    "nivo": "^0.31.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-lottie": "^1.2.3",
